<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:src="@drawable/images_2_1"
        android:layout_gravity="center"
        android:layout_marginTop="-5dp"></ImageView>

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingLeft="20dp"
        android:drawablePadding="20dp"
        android:hint="@string/hintUser"
        android:drawableLeft="@drawable/usuario_icon"
        android:background="@drawable/usuario"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"></EditText>
    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingLeft="20dp"
        android:drawablePadding="20dp"
        android:hint="@string/hintMail"
        android:drawableLeft="@drawable/mensaje"
        android:background="@drawable/usuario"
        android:layout_marginLeft="10dp"
        android:singleLine="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"></EditText>
    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingLeft="20dp"
        android:hint="Mensaje"
        android:background="@drawable/rectangulo_mensaje"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"></EditText>
    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/iniciar"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>