<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Menu"
    android:background="@color/colorBackgroundMenu">
     <Button
        android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
        android:layout_marginRight="10dp"
         android:text="Cerrar sesion"
         android:textColor="@color/colorWhite"
         android:drawableLeft="@drawable/invalid_name"
         android:drawablePadding="5dp"
         android:background="@android:color/transparent"
         />
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/tvwUser"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text=""/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llNoticias"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cuadro_1"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/periodico"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textColor="@color/colorBlueWords"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProductos"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cuadro_1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cajas"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/products"
                android:textColor="@color/colorBlueWords"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAcercade"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cuadro_1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/acerca_de"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/colorBlueWords"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContacto"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/cuadro_1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contacto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/colorBlueWords"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>



</LinearLayout>